--- a/front-end-resume.org
+++ b/front-end-resume.org
@@ -3,7 +3,7 @@
 #+TITLE:     Resume
 #+AUTHOR:    Oleg Sivokon
 #+EMAIL:     olegsivokon@gmail.com
-#+DATE:      <2015-08-11 Tue>
+#+DATE:      <2015-10-10 Sat>
 #+DESCRIPTION: My resume
 #+KEYWORDS: Resume, job, employment, cv
 #+OPTIONS: toc:nil
@@ -60,35 +60,44 @@
 ** PowToon Ltd.
    + Position :: /Programmer/
    + Term :: /January 2014--May 2015/
-   + *Accomplishments*
-     - I rewrote the major the application component (the player).
+   + Accomplishments :: $\;$
+   
+     - I rewrote a major application component (the player) in Haxe (compiled to
+       Flash and C++).
      - I wrote most of the infrastructure code s.a. build scripts, automated
-       test generation and continuous integration server setup.
+       test generation and continuous integration server setup using Ant, Grdle
+       and various utilities written in Python, s.a. Fabric.
      - I wrote several designs for the product.
    
 ** TransGaming Inc.
    + Position :: /Programmer/
    + Term :: /April 2013--2013 (less than a year)/
-   + *Accomplishments*
-     - I wrote a game portal for ``Smart TV'' deployment.
+   + Accomplishments :: $\;$
+   
+     - I wrote a game portal for ``Smart TV'' deployment using TypeScript.
      - I wrote a tester program, which stress-tested the program performance
-       on ``Smart TV''.
-     - I wrote automated build for my project.
+       on ``Smart TV'' in Python.
+     - I wrote automated build for my project using Ant.
      - I wrote a sizable chunk of code dealing with usage statistic aggregation
-       using Google Analytics.
+       based on Google Analytics in JavaScript.
 
 ** Rounds
    + Position :: /Programmer/
    + Term :: /December 2010 – August 2011 (9 months)/
-   + *Accomplishments*
-     - I rewrote the communication part of the video chat application.
-     - I wrote a testing server and utility programs for automated testing.
+   + Accomplishments :: $\;$
+   
+     - I rewrote the communication part of the video chat application in
+       ActionScript.
+     - I wrote a testing server and utility programs for automated testing in
+       Erlang.
      - I also wrote a small natural language processing program which was used
        to advertise the company's product.
    
 * Courses
-  Data Scientists Toolbox, Statistics, Data Analysis, Machine Learning. at
-  Coursera and edX.
+  I am a second year student at Open University of Israel.
+
+  I took online courses at edX and Coursera.  The list is not exhaustive: 
+  Data Scientists Toolbox, Statistics, Data Analysis, Machine Learning.
 
 * Volunteering And Community Work
   SCons project, ActionScript plugin.  (SCons is an extensible build system
