--- a/front-end-resume.tex
+++ b/front-end-resume.tex
@@ -1,4 +1,4 @@
-% Created 2015-08-11 Tue 13:04
+% Created 2015-10-10 Sat 11:16
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
@@ -15,13 +15,13 @@
 \usepackage{wasysym}
 \usepackage{amssymb}
 \usepackage{capt-of}
-\usepackage{hyperref}
+\usepackage[hidelinks]{hyperref}
 \tolerance=1000
 \usepackage[utf8]{inputenc}
 \usepackage[scaled]{helvet}
 \renewcommand*\familydefault{\sfdefault}
 \author{Oleg Sivokon}
-\date{\textit{<2015-08-11 Tue>}}
+\date{\textit{<2015-10-10 Sat>}}
 \title{Resume}
 \hypersetup{
  pdfauthor={Oleg Sivokon},
@@ -94,11 +94,14 @@ Subversion, Mercurial, Perforce, Bazaar.
 \begin{description}
 \item[{Position}] \emph{Programmer}
 \item[{Term}] \emph{January 2014--May 2015}
-\item \textbf{Accomplishments}
+\item[{Accomplishments}] \(\;\)
+
 \begin{itemize}
-\item I rewrote the major the application component (the player).
+\item I rewrote a major application component (the player) in Haxe (compiled to
+Flash and C++).
 \item I wrote most of the infrastructure code s.a. build scripts, automated
-test generation and continuous integration server setup.
+test generation and continuous integration server setup using Ant, Grdle
+and various utilities written in Python, s.a. Fabric.
 \item I wrote several designs for the product.
 \end{itemize}
 \end{description}
@@ -108,14 +111,15 @@ test generation and continuous integration server setup.
 \begin{description}
 \item[{Position}] \emph{Programmer}
 \item[{Term}] \emph{April 2013--2013 (less than a year)}
-\item \textbf{Accomplishments}
+\item[{Accomplishments}] \(\;\)
+
 \begin{itemize}
-\item I wrote a game portal for ``Smart TV'' deployment.
+\item I wrote a game portal for ``Smart TV'' deployment using TypeScript.
 \item I wrote a tester program, which stress-tested the program performance
-on ``Smart TV''.
-\item I wrote automated build for my project.
+on ``Smart TV'' in Python.
+\item I wrote automated build for my project using Ant.
 \item I wrote a sizable chunk of code dealing with usage statistic aggregation
-using Google Analytics.
+based on Google Analytics in JavaScript.
 \end{itemize}
 \end{description}
 
@@ -124,10 +128,13 @@ using Google Analytics.
 \begin{description}
 \item[{Position}] \emph{Programmer}
 \item[{Term}] \emph{December 2010 – August 2011 (9 months)}
-\item \textbf{Accomplishments}
+\item[{Accomplishments}] \(\;\)
+
 \begin{itemize}
-\item I rewrote the communication part of the video chat application.
-\item I wrote a testing server and utility programs for automated testing.
+\item I rewrote the communication part of the video chat application in
+ActionScript.
+\item I wrote a testing server and utility programs for automated testing in
+Erlang.
 \item I also wrote a small natural language processing program which was used
 to advertise the company's product.
 \end{itemize}
@@ -135,8 +142,10 @@ to advertise the company's product.
 
 \section{Courses}
 \label{sec:orgheadline13}
-Data Scientists Toolbox, Statistics, Data Analysis, Machine Learning. at
-Coursera and edX.
+I am a second year student at Open University of Israel.
+
+I took online courses at edX and Coursera.  The list is not exhaustive: 
+Data Scientists Toolbox, Statistics, Data Analysis, Machine Learning.
 
 \section{Volunteering And Community Work}
 \label{sec:orgheadline14}
