--- a/short-resume.tex
+++ b/short-resume.tex
@@ -1,4 +1,4 @@
-% Created 2015-08-11 Tue 13:04
+% Created 2015-10-13 Tue 17:41
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
@@ -15,21 +15,15 @@
 \usepackage{wasysym}
 \usepackage{amssymb}
 \usepackage{capt-of}
-\usepackage{hyperref}
+\usepackage[hidelinks]{hyperref}
 \tolerance=1000
 \usepackage[utf8]{inputenc}
 \usepackage[scaled]{helvet}
 \renewcommand*\familydefault{\sfdefault}
+\reversemarginpar
 \author{Oleg Sivokon}
 \date{\textit{<2015-08-11 Tue>}}
 \title{Resume}
-\hypersetup{
- pdfauthor={Oleg Sivokon},
- pdftitle={Resume},
- pdfkeywords={Resume, job, employment, cv},
- pdfsubject={My resume},
- pdfcreator={Emacs 25.0.50.1 (Org mode 8.3beta)}, 
- pdflang={English}}
 \begin{document}
 
 \maketitle
