Fixed wrong Linkedin profile address.

--- a/front-end-resume.tex
+++ b/front-end-resume.tex
@@ -1,4 +1,4 @@
-% Created 2015-10-13 Tue 21:25
+% Created 2015-10-13 Tue 21:39
 \documentclass[11pt,sans]{moderncv}
 \moderncvstyle{casual}
 \moderncvcolor{blue}
@@ -22,7 +22,7 @@
 \address{Tel Aviv}
 \phone[mobile]{+972~(0)~544-563314}
 \email{olegsivokon@gmail.com}
-\social[linkedin]{oleg.sivokon}
+\social[linkedin]{wvxvw}
 \social[github]{wvxvw}
 \photo[64pt][0.4pt]{picture}
 
