--- a/infra-resume.tex
+++ b/infra-resume.tex
@@ -1,4 +1,4 @@
-% Created 2017-08-04 Fri 09:53
+% Created 2018-06-15 Fri 13:19
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
@@ -26,7 +26,7 @@
 \hypersetup{
   pdfkeywords={Resume, job, employment, cv},
   pdfsubject={My resume},
-  pdfcreator={Emacs 26.0.50 (Org mode 8.2.10)}}
+  pdfcreator={Emacs 25.3.1 (Org mode 8.2.10)}}
 \begin{document}
 
 
@@ -52,10 +52,7 @@ Eilat 13, Apt. 5, Givatayim, Israel \\[18pt]
 \label{sec-1-1}
 My current work is in Go, Python and Bash.
 
-Expert in JavaScript and various related technologies such as
-ActionScript, TypeScript, CSS and HTML.
-
-Also programmed in Java and PHP several years ago.
+Other languages I programmed in: Java, C, JavaScript, Erlang.
 
 Expert in Common Lisp, and Prolog.  Some knowledge of Clojure.
 
@@ -63,12 +60,12 @@ Wrote several Emacs Lisp packages.
 
 \subsection*{Programming Environment}
 \label{sec-1-2}
-In my current job, I work extensively with Linux, Docker and
-VCenter.  I am proficient with variety of build systems, several
-databases, and various UNIX tools needed to maintain infrastructure
-of a big programming workshop running.  I set up and run Jenkins
-jobs, Elastic Search tools, Docker Registry and Etcd distributed
-database.
+In my current job, I work extensively with Linux, Docker,
+Kubernetes, Apache Kafka and VCenter.  I am proficient with variety
+of build systems, several databases, and various UNIX tools needed
+to maintain infrastructure of a big programming workshop running.
+I set up and run Jenkins jobs, Elastic Search tools, Docker
+Registry and Etcd distributed database.
 
 I have substantial knowledge of Git and of a variety of tools that
 aid in writing quality code such as linters, unit test frameworks,
@@ -76,13 +73,23 @@ formatters etc.
 
 Recently, I had to work with numerical and statistical Python
 packages: NumPy, Pandas and Dask.  I also have experience working
-with popular Python frameworks: Django, Tornado, Celery.
+with popular Python frameworks: Django, Tornado, Pytest.
 
 \section*{Work History}
 \label{sec-2}
 
-\subsection*{AllAspect}
+\subsection*{NEX Traiana}
 \label{sec-2-1}
+\begin{description}
+\item[{Programmer}] August 2017--present
+\begin{itemize}
+\item Wrote tools for automating microservice deployment, debugging
+and testing.
+\end{itemize}
+\end{description}
+
+\subsection*{AllAspect}
+\label{sec-2-2}
 \begin{description}
 \item[{Programmer}] April 2017--August 2017
 \begin{itemize}
@@ -93,7 +100,7 @@ statistical data.
 \end{description}
 
 \subsection*{Elastifile}
-\label{sec-2-2}
+\label{sec-2-3}
 \begin{description}
 \item[{Programmer}] December 2015--April 2017
 \begin{itemize}
@@ -106,7 +113,7 @@ interface with system code.
 \end{description}
 
 \subsection*{PowToon Ltd.}
-\label{sec-2-3}
+\label{sec-2-4}
 \begin{description}
 \item[{Programmer}] January 2014--May 2015
 \begin{itemize}
@@ -119,7 +126,7 @@ setup.
 \end{description}
 
 \subsection*{TransGaming Inc.}
-\label{sec-2-4}
+\label{sec-2-5}
 \begin{description}
 \item[{Programmer}] April 2013--2013
 \begin{itemize}
@@ -133,7 +140,7 @@ aggregation using Google Analytics.
 \end{description}
 
 \subsection*{Rounds}
-\label{sec-2-5}
+\label{sec-2-6}
 \begin{description}
 \item[{Programmer}] December 2010--August 2011
 \begin{itemize}
@@ -164,7 +171,10 @@ I'm an active member of Emacs Q/A site from the StackExchange family.
 \section*{Examples Of My Work}
 \label{sec-5}
 My Github profile:
-\url{https://github.com/wvxvw/}.
+\begin{itemize}
+\item \url{https://github.com/wvxvw/}.
+\item \url{https://github.com/wvxvw-traiana/}.
+\end{itemize}
 
 \section*{Languages}
 \label{sec-6}
@@ -178,5 +188,5 @@ NLP, Computational linguistics, Moral philosophy, General AI, Graphs.
 \label{sec-8}
 Citizen of Israel and Ukraine.  USA citizenship pending.  Willing
 to relocate.
-% Emacs 26.0.50 (Org mode 8.2.10)
+% Emacs 25.3.1 (Org mode 8.2.10)
 \end{document}
